Double Tapping S on Motion Tracking Panel no longer scale only the tracker size #110821

Closed
opened 2023-08-05 02:31:52 +02:00 by gabrielbenicio · 2 comments

System Information
Operating system: Windows 11
Graphics card: RTX 3070

Blender Version
Broken: 3.6
Worked: 3.0~3.5

Caused by 03f17c42d0

Short description of error
Double Tapping S on Motion Tracking Panel no longer scale only the tracker size.

Reproduce:

  • Have some trackers in your tracking editor
  • Turn on header > Clip Editor > Search (display search area)
  • Select a tracker and press s s
    • It will scale search area together in 3.6 but in 3.5 and previous versions, double tap s will switch to tracker size scaling only.
    • Expected: It only scales the tracker size and search area is not affected
**System Information** Operating system: Windows 11 Graphics card: RTX 3070 **Blender Version** Broken: 3.6 Worked: 3.0~3.5 Caused by 03f17c42d0ad53c4ec2ac3781c5d3703eaf641f1 **Short description of error** Double Tapping S on Motion Tracking Panel no longer scale only the tracker size. Reproduce: - Have some trackers in your tracking editor - Turn on header > Clip Editor > Search (display search area) - Select a tracker and press `s s` - It will scale search area together in 3.6 but in 3.5 and previous versions, double tap `s` will switch to tracker size scaling only. - Expected: It only scales the tracker size and search area is not affected
gabrielbenicio added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-08-05 02:31:53 +02:00
YimingWu changed title from Double Tapping S on Motion Tracking Panel no longer scale only the Search Area to Double Tapping S on Motion Tracking Panel no longer scale only the tracker size 2023-08-06 04:37:12 +02:00
Member

Can confirm. Updated description.

Can confirm. Updated description.
Member

Caused by 03f17c42d0

@mano-wii : mind checking?

Caused by 03f17c42d0ad53c4ec2ac3781c5d3703eaf641f1 @mano-wii : mind checking?
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-08-07 20:13:22 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110821
No description provided.